--- a/slimeworldmanager-plugin/pom.xml
+++ b/slimeworldmanager-plugin/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <artifactId>slimeworldmanager</artifactId>
         <groupId>com.grinderwolf</groupId>
-        <version>2.3.0</version>
+        <version>2.2.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>slimeworldmanager-plugin</artifactId>
@@ -23,8 +23,13 @@
         <dependency>
             <groupId>org.spigotmc</groupId>
             <artifactId>spigot-api</artifactId>
-            <version>1.13-R0.1-SNAPSHOT</version>
+            <version>1.8.8-R0.1-SNAPSHOT</version>
             <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.reflections</groupId>
+            <artifactId>reflections</artifactId>
+            <version>0.9.9</version>
         </dependency>
         <dependency>
             <groupId>com.grinderwolf</groupId>
@@ -61,11 +66,6 @@
             <artifactId>configurate-yaml</artifactId>
             <version>3.7-SNAPSHOT</version>
         </dependency>
-        <dependency>
-            <groupId>org.bstats</groupId>
-            <artifactId>bstats-bukkit</artifactId>
-            <version>1.5</version>
-        </dependency>
     </dependencies>
     <build>
         <resources>
@@ -99,10 +99,6 @@
                         </filter>
                     </filters>
                     <relocations>
-                        <relocation>
-                            <pattern>org.bstats</pattern>
-                            <shadedPattern>com.grinderwolf.swm.internal.org.bstats</shadedPattern>
-                        </relocation>
                         <relocation>
                             <pattern>ninja.leaping.configurate</pattern>
                             <shadedPattern>com.grinderwolf.swm.internal.ninja.leaping.configurate</shadedPattern>
