--- a/slimeworldmanager-plugin/src/main/resources/plugin.yml
+++ b/slimeworldmanager-plugin/src/main/resources/plugin.yml
@@ -1,9 +1,11 @@
 name: SlimeWorldManager
 version: ${project.version}
 main: com.grinderwolf.swm.plugin.SWMPlugin
-author: Grinderwolf
+authors:
+  - Grinderwolf
+  - Swofty
 description: Slime World Manager is a resource that implements the Slime Region Format, designed by the Hypixel Team to load and save worlds more efficiently.
-api-version: 1.13
+api-version: 1.8
 commands:
   swm:
     description: Main SWM command.
