--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -35,7 +35,7 @@ jobs:
     - name: Add Jar to GitHub releases
       uses: "marvinpinto/action-automatic-releases@latest"
       with:
-        repo_token: "${{ secrets.GITHUB_TOKEN }}"
+        repo_token: "${{ github.token }}"
         automatic_release_tag: "latest"
         prerelease: false
         title: "Automatic Build from Pull Request"
