Added SSL support for MySQL

--- a/slimeworldmanager-plugin/src/main/resources/sources.yml
+++ b/slimeworldmanager-plugin/src/main/resources/sources.yml
@@ -6,7 +6,8 @@ mysql:
   port: 3306
   username: slimeworldmanager
   password: ''
-  database: slimeworldmanager
+  database: slimeworldmanager  '
+  usessl: false
 mongodb:
   enabled: false
   host: 127.0.0.1
