--- a/pom.xml
+++ b/pom.xml
@@ -62,10 +62,25 @@
         </plugins>
   </build>
 
-  <profiles>
-      <profile>
-          <id>github</id>
-      </profile>
-  </profiles>
+    <profiles>
+        <profile>
+            <id>github</id>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>
+            <distributionManagement>
+                <repository>
+                    <id>github</id>
+                    <name>GitHub OWNER Apache Maven Packages</name>
+                    <url>https://github.com/Swofty-Developments/Continued-Slime-World-Manager</url>
+                </repository>
+                <snapshotRepository>
+                    <id>github</id>
+                    <name>GitHub OWNER Apache Maven Packages</name>
+                    <url>https://github.com/Swofty-Developments/Continued-Slime-World-Manager</url>
+                </snapshotRepository>
+            </distributionManagement>
+        </profile>
+    </profiles>
 
 </project>
