--- a/pom.xml
+++ b/pom.xml
@@ -5,11 +5,10 @@
     <groupId>net.swofty</groupId>
     <artifactId>swoftyworldmanager</artifactId>
     <packaging>pom</packaging>
-    <version>3.0.2</version>
+    <version>3.0.5</version>
     <modules>
         <module>swoftyworldmanager-api</module>
-        <module>swoftyworldmanager-nms-common</module>
-        <module>swoftyworldmanager-nms-v1_8_R3</module>
+        <module>swoftyworldmanager-nms</module>
         <module>swoftyworldmanager-plugin</module>
         <module>swoftyworldmanager-importer</module>
         <module>swoftyworldmanager-classmodifier</module>
@@ -66,18 +65,22 @@
         <profile>
             <id>github</id>
             <activation>
+                <property>
+                    <name>useGitHubPackages</name>
+                    <value>true</value>
+                </property>
                 <activeByDefault>true</activeByDefault>
             </activation>
             <distributionManagement>
                 <repository>
                     <id>github</id>
                     <name>GitHub OWNER Apache Maven Packages</name>
-                    <url>https://github.com/Swofty-Developments/Continued-Slime-World-Manager</url>
+                    <url>https://maven.pkg.github.com/Swofty-Developments/Continued-Slime-World-Manager</url>
                 </repository>
                 <snapshotRepository>
                     <id>github</id>
                     <name>GitHub OWNER Apache Maven Packages</name>
-                    <url>https://github.com/Swofty-Developments/Continued-Slime-World-Manager</url>
+                    <url>https://maven.pkg.github.com/Swofty-Developments/Continued-Slime-World-Manager</url>
                 </snapshotRepository>
             </distributionManagement>
         </profile>
